load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "services",
    srcs = [
        "todo.go",
        "todo_impl.go",
    ],
    importpath = "github.com/todo-project/services",
    visibility = ["//visibility:public"],
    deps = [
        "//models",
        "//pb",
        "//utils",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//bson/primitive",
        "@org_mongodb_go_mongo_driver//mongo",
        "@org_mongodb_go_mongo_driver//mongo/options",
    ],
)

go_test(
    name = "services_test",
    srcs = ["todo_impl_test.go"],
    embed = [":services"],
    deps = [
        "//models",
        "//pb",
        "@com_github_stretchr_testify//assert",
        "@org_mongodb_go_mongo_driver//bson",
        "@org_mongodb_go_mongo_driver//bson/primitive",
        "@org_mongodb_go_mongo_driver//mongo/integration/mtest",
    ],
)
